# barkeep

./: .clang-format  .gitignore  .gitmodules  .travis.yml  LICENSE  Makefile  README.md  conanfile.py  demo.cpp  dummy.py  meanwhile.h  meson.build  pyproject.toml  requirements-dev.txt  test.cpp
.github/workflows/: build-test.yml  build-wheels.yml
barkeep/: barkeep.h
docs/: Doxyfile  README.md  _sidebar.md  after.cpp  before.cpp  config.json  index.html  make-docs.sh  make_docs.py
docs/api/: README.md
docs/api/Classes/: README.md  classbarkeep_1_1_animation.md  classbarkeep_1_1_animation_display.md  classbarkeep_1_1_async_display.md  classbarkeep_1_1_async_displayer.md  classbarkeep_1_1_base_display.md  classbarkeep_1_1_composite.md  classbarkeep_1_1_composite_display.md  classbarkeep_1_1_counter.md  classbarkeep_1_1_counter_display.md  classbarkeep_1_1_iterable_bar.md  classbarkeep_1_1_iterable_bar_1_1_iterator.md  classbarkeep_1_1_progress_bar.md  classbarkeep_1_1_progress_bar_display.md  classbarkeep_1_1_speedometer.md  classbarkeep_1_1_status.md  classbarkeep_1_1_status_display.md  structbarkeep_1_1_animation_config.md  structbarkeep_1_1_atomic_traits.md  structbarkeep_1_1_atomic_traits_3_01std_1_1atomic_3_01_t_01_4_01_4.md  structbarkeep_1_1_bar_parts.md  structbarkeep_1_1_counter_config.md  structbarkeep_1_1_iterable_bar_config.md  structbarkeep_1_1_progress_bar_config.md
docs/api/Namespaces/: README.md  namespacebarkeep.md
docs/orig-templates/: class_members_details.tmpl  class_members_inherited_tables.tmpl  class_members_tables.tmpl  footer.tmpl  kind_class.tmpl  member_details.tmpl  nonclass_members_tables.tmpl
docs/template/: class_members_details.tmpl  class_members_inherited_tables.tmpl  class_members_tables.tmpl  details.tmpl  header.tmpl  index.tmpl  kind_class.tmpl  member_details.tmpl  nonclass_members_details.tmpl  nonclass_members_tables.tmpl
meanwhile/: meanwhile.h
python/: README.md  barkeep.cpp  meanwhile-py.cpp  meson.build
python/tests/: conftest.py  demo.py  test.py
subprojects/: catch2.wrap  fmt.wrap
test_package/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py  test_package.cpp
tests/: demo-fmt.cpp  demo-fmtlib.cpp  demo-stdfmt.cpp  demo.cpp  meson.build  test-fmt.cpp  test-fmtlib.cpp  test-stdfmt.cpp  test.cpp  testutil.h
