[build-system]
build-backend = 'mesonpy'
requires = ['meson-python']

[tool.meson-python.args]
compile = ['python']
install = ['--tags=runtime,python-runtime']

[project]
name = 'barkeep'
version = '0.0.1'
description = ''
readme = 'docs/README.md'
requires-python = '>=3.9'
license = {file = 'LICENSE'}
authors = [
  {name = 'Ozan Irsoy'},
]

[tool.cibuildwheel]
build-verbosity = "3"

[tool.cibuildwheel.musllinux]
build-verbosity = "3"
environment = { CXXFLAGS = "-DBARKEEP_ENABLE_ATOMIC_FLOAT=0" }
