[build-system]
build-backend = 'mesonpy'
requires = ['meson-python']

[tool.meson-python.args]
compile = ['python']
install = ['--tags=runtime,python-runtime']

[project]
name = 'barkeep'
version = '0.0.1'
description = ''
readme = 'docs/README.md'
requires-python = '>=3.9'
license = {file = 'LICENSE'}
authors = [
  {name = 'Ozan Irsoy'},
]

[tool.cibuildwheel]
build-verbosity = "3"
test-requires = "pytest"
test-command = "pytest {project}/python/tests/test.py"

[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
environment = { CXXFLAGS = "-DBARKEEP_ENABLE_ATOMIC_FLOAT=0" }

[[tool.cibuildwheel.overrides]]
select = "*-macosx_arm64*" # TODO: use g++ when cross compiling
environment = { CXXFLAGS = "-DBARKEEP_ENABLE_ATOMIC_FLOAT=0" }

[[tool.cibuildwheel.overrides]]
select = "*-macosx_x86_64*"
environment = { CXX = "g++-11" }
