[build-system]
build-backend = 'mesonpy'
requires = ['meson-python']

[tool.meson-python.args]
compile = ['python']
install = ['--tags=runtime,python-runtime']

[project]
name = 'barkeep'
version = '0.1.3'
description = ''
readme = 'python/README.md'
requires-python = '>=3.9'
license = {file = 'LICENSE'}
authors = [
  {name = 'Ozan Irsoy'},
]

[tool.cibuildwheel]
build-verbosity = "3"
test-requires = "pytest"
test-command = "pytest {project}/python/tests/test.py"

[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
environment = { CXXFLAGS = "-DBARKEEP_ENABLE_ATOMIC_FLOAT=0" }
test-command = "pytest --no-atomic-float {project}/python/tests/test.py"

[[tool.cibuildwheel.overrides]]
select = "*-macosx_arm64*"
environment = { CXX = "$(brew --prefix llvm@15)/bin/clang++", CXXFLAGS = "-DBARKEEP_ENABLE_ATOMIC_FLOAT=0" }
test-command = "pytest --no-atomic-float {project}/python/tests/test.py"

[[tool.cibuildwheel.overrides]]
select = "*-macosx_x86_64*"
environment = { CXX = "g++-14", CXXFLAGS = "-ld_classic" }
